--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.27.0",
-    "swagger-jsdoc": "^6.2.7",
-    "swagger-ui-express": "^4.6.0"
+    "sequelize": "^6.27.0"
   }
 }
